# Bevy_VR_game

./: Cargo.toml  README.md  build.gradle  local.properties  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/textures/: cube.glb  floating.glb  grind.glb  ice_monster.glb  jump.glb  planet.glb  slide.glb
app/src/main/cpp/: dummy.cpp
gradle/: libs.versions.toml
scripts/: prepare_android.sh
src/: assets.rs  controller.rs  controller_cubes.rs  gameplay.rs  lib.rs  locomotion.rs  main.rs  player.rs  ramp.rs  scene.rs  shooting.rs
